--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -39,6 +39,7 @@ jobs:
         name: Run pipeline update
         run: |
           databricks bundle run jd_dabs_project_job --refresh-all 2>&1 | tee output.log
+          databricks bundle run jd_dabs_project_dbt_job --refresh-all 2>&1 | tee output.log
         env:
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
           DATABRICKS_BUNDLE_ENV: dev
