--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -42,3 +42,26 @@ jobs:
         env:
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
           DATABRICKS_BUNDLE_ENV: prod
+  
+
+  workflow_run:
+    name: "DBT Job run for the workflow"
+    runs-on: ubuntu-latest
+    environment: prod
+
+    needs:
+      - deploy
+
+    steps:
+      - uses: actions/checkout@v4  # Update to the latest version
+
+      - uses: databricks/setup-cli@main
+
+      - shell: bash
+        name: Run pipeline update
+        run: |
+          databricks bundle run jd_dabs_project_dbt_job --refresh-all 2>&1 | tee output.log
+        env:
+          DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
+          DATABRICKS_BUNDLE_ENV: prod
+    
