--- a/databricks.yml
+++ b/databricks.yml
@@ -18,7 +18,7 @@ variables:
     default: 88f296a4979acc8d
 
 targets:
-  # The 'dev' target, for development purposes. This is the default target. a change
+  # The 'dev' target, for development purposes. This is the default target. 
   
   dev:
     # We use 'mode: development' to indicate this is a personal development copy:
