--- a/databricks.yml
+++ b/databricks.yml
@@ -32,7 +32,7 @@ targets:
       dbt_schema: dbt-schema
       dbt_warehouse: 00d8c64ecdffa15f
     workspace:
-      host: https://adb-1335197976019209.9.azuredatabricks.net
+      host: https://adb-1522492950378948.8.azuredatabricks.net/
 
   ## Optionally, there could be a 'staging' target here.
   ## (See Databricks docs on CI/CD at https://docs.databricks.com/dev-tools/bundles/index.html.)
@@ -51,7 +51,7 @@ targets:
       dbt_schema: dbt-schema
       dbt_warehouse: 9446665ae5fa1cd9
     workspace:
-      host: https://adb-2633273610566710.10.azuredatabricks.net 
+      host: https://adb-4315856485907437.17.azuredatabricks.net/ 
       # We always use /Users/juandiego.vargasrosales@databricks.com for all resources to make sure we only have a single copy.
       # If this path results in an error, please make sure you have a recent version of the CLI installed.
       root_path: /Users/juandiego.vargasrosales@databricks.com/.bundle/${bundle.name}/${bundle.target}
