--- a/databricks.yml
+++ b/databricks.yml
@@ -47,7 +47,7 @@ targets:
 
   # The 'prod' target, used for production deployment.
   prod:
-    # We use 'mode: production' to indicate this is a production deployment. ADDING CODE
+    # We use 'mode: production' to indicate this is a production deployment. 
     # Doing so enables strict verification of the settings below.
     mode: production
     variables:
