--- a/databricks.yml
+++ b/databricks.yml
@@ -21,7 +21,7 @@ variables:
 
 
 targets:
-  # The 'dev' target, for development purposes. This is the default target in the project. ADDING TEXT
+  # The 'dev' target, for development purposes. This is the default target in the project. 
     
   dev:
     # We use 'mode: development' to indicate this is a personal development copy:
