--- a/databricks.yml
+++ b/databricks.yml
@@ -39,7 +39,7 @@ targets:
       host: https://adb-999206372626022.2.azuredatabricks.net/
 
   ## Optionally, there could be a 'staging' target here.
-  ## (See Databricks docs on CI/CD at https://docs.databricks.com/dev-tools/bundles/index.html.)
+  ## (See Databricks docs on CI/CD at https://docs.databricks.com/dev-tools/bundles/index.html.) ADD TEXT
   #
   # staging:
   #   workspace:
