--- a/databricks.yml
+++ b/databricks.yml
@@ -42,7 +42,7 @@ targets:
       host: https://adb-3792141730010664.4.azuredatabricks.net/
 
   ## Optionally, there could be a 'staging' target here.
-  ## (See Databricks docs on CI/CD at https://docs.databricks.com/dev-tools/bundles/index.html.) AADDING TEXT FOR TESTING
+  ## (See Databricks docs on CI/CD at https://docs.databricks.com/dev-tools/bundles/index.html.) 
   #
   # staging:
   #   workspace:
