--- a/databricks.yml
+++ b/databricks.yml
@@ -23,7 +23,7 @@ variables:
 
 
 targets:
-  # The 'dev' target, for development purposes. This is the default target in the project. ADD TEXT
+  # The 'dev' target, for development purposes. This is the default target in the project. TESTING
     
   dev:
     # We use 'mode: development' to indicate this is a personal development copy:
