--- a/databricks.yml
+++ b/databricks.yml
@@ -46,7 +46,7 @@ targets:
       host: https://adb-1187353147664637.17.azuredatabricks.net/
 
   ## Optionally, there could be a 'staging' target here.
-  ## (See Databricks docs on CI/CD at https://docs.databricks.com/dev-tools/bundles/index.html.) 
+  ## (See Databricks docs on CI/CD at https://docs.databricks.com/dev-tools/bundles/index.html.
   #
   # staging:
   #   workspace:
