--- a/databricks.yml
+++ b/databricks.yml
@@ -47,7 +47,7 @@ targets:
       host: https://adb-2604156483555035.15.azuredatabricks.net/
 
   ## Optionally, there could be a 'staging' target here.
-  ## (See Databricks docs on CI/CD at https://docs.databricks.com/dev-tools/bundles/index.html.
+  ## (See Databricks docs on CI/CD at https://docs.databricks.com/dev-tools/bundles/index.html. MAKING A CHANGE
   #
   # staging:
   #   workspace:
