--- a/databricks.yml
+++ b/databricks.yml
@@ -27,7 +27,7 @@ variables:
 
 
 targets:
-  # The 'dev' target, for development purposes. This is the default target in the project. ADD TEXT
+  # The 'dev' target, for development purposes. This is the default target in the project. 
   
     
   dev:
